@@ -3,13 +3,16 @@ package school.faang.user_service.service.impl;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import school.faang.user_service.dto.RecommendationDto;
 import school.faang.user_service.dto.SkillOfferDto;
 import school.faang.user_service.entity.Skill;
+import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.recommendation.Recommendation;
 import school.faang.user_service.entity.recommendation.SkillOffer;
 import school.faang.user_service.exception.DataValidationException;
+import school.faang.user_service.mapper.RecommendationMapper;
 import school.faang.user_service.repository.SkillRepository;
 import school.faang.user_service.repository.UserRepository;
 import school.faang.user_service.repository.recommendation.RecommendationRepository;
@@ -17,6 +20,8 @@ import school.faang.user_service.repository.recommendation.SkillOfferRepository;
 import school.faang.user_service.service.RecommendationService;
 
 import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,85 +31,57 @@ public class RecommendationServiceImpl implements RecommendationService {
     private final SkillRepository skillRepository;
     private final UserRepository userRepository;
     private final SkillOfferRepository skillOfferRepository;
+    private final RecommendationMapper recommendationMapper;
 
     @Override
     @Transactional
-    public RecommendationDto createOrUpdate(RecommendationDto recommendationDto) {
-        Recommendation recommendation;
+    public RecommendationDto create(RecommendationDto recommendationDto) {
+        User author = userRepository.findById(recommendationDto.getAuthorId())
+                .orElseThrow(() -> new DataValidationException("Author not found"));
+        User receiver = userRepository.findById(recommendationDto.getReceiverId())
+                .orElseThrow(() -> new DataValidationException("Receiver not found"));
 
-        if (recommendationDto.getId() != null) {
-            // Если ID рекомендации существует, значит нужно её обновить
-            recommendation = recommendationRepository.findById(recommendationDto.getId())
-                    .orElseThrow(() -> new DataValidationException("Recommendation not found"));
-        } else {
-            // Иначе создаём новую рекомендацию
-            recommendation = new Recommendation();
-            recommendation.setAuthor(userRepository.findById(recommendationDto.getAuthorId())
-                    .orElseThrow(() -> new DataValidationException("Author not found")));
-            recommendation.setReceiver(userRepository.findById(recommendationDto.getReceiverId())
-                    .orElseThrow(() -> new DataValidationException("Receiver not found")));
-            recommendation.setCreatedAt(LocalDateTime.now());
-        }
+        Recommendation recommendation = recommendationMapper.toEntity(recommendationDto);
+        recommendation.setAuthor(author);
+        recommendation.setReceiver(receiver);
+        recommendation.setCreatedAt(LocalDateTime.now());
 
-        // Валидация содержания рекомендации
-        if (recommendationDto.getContent() == null || recommendationDto.getContent().isEmpty()) {
-            throw new DataValidationException("Recommendation content cannot be empty.");
-        }
-
-        // Обновляем контент рекомендации
-        recommendation.setContent(recommendationDto.getContent());
-        recommendation.setUpdatedAt(LocalDateTime.now());
-
-        // Удаляем старые предложения скиллов (при обновлении)
-        if (recommendation.getId() != null) {
-            skillOfferRepository.deleteAllByRecommendationId(recommendation.getId());
-        }
-
-        // Добавляем новые предложения скиллов
-        for (SkillOfferDto skillOfferDto : recommendationDto.getSkillOffers()) {
-            Skill skill = skillRepository.findById(skillOfferDto.getSkillId())
-                    .orElseThrow(() -> new DataValidationException("Skill not found"));
-
-            // Проверяем, есть ли уже скилл у пользователя
-            if (skillRepository.findUserSkill(skill.getId(), recommendation.getReceiver().getId()).isPresent()) {
-                // Добавляем автора как гаранта, если он еще не гарантировал этот скилл
-                SkillOffer skillOffer = SkillOffer.builder()
-                        .skill(skill)
-                        .recommendation(recommendation)
-                        .build();
-                skillOfferRepository.save(skillOffer);
-            } else {
-                // Если у пользователя еще нет скилла, добавляем его
-                skillRepository.assignSkillToUser(skill.getId(), recommendation.getReceiver().getId());
-
-                SkillOffer skillOffer = SkillOffer.builder()
-                        .skill(skill)
-                        .recommendation(recommendation)
-                        .build();
-                skillOfferRepository.save(skillOffer);
-            }
-        }
-
-        // Сохраняем рекомендацию
         recommendationRepository.save(recommendation);
+        handleSkillOffers(recommendation, recommendationDto.getSkillOffers());
 
-        // Преобразуем в DTO и возвращаем
-        return mapToDto(recommendation);
+        return recommendationMapper.toDto(recommendation);
     }
 
-    private RecommendationDto mapToDto(Recommendation recommendation) {
-        return RecommendationDto.builder()
-                .id(recommendation.getId())
-                .authorId(recommendation.getAuthor().getId())
-                .receiverId(recommendation.getReceiver().getId())
-                .content(recommendation.getContent())
-                .skillOffers(recommendation.getSkillOffers().stream()
-                        .map(skillOffer -> SkillOfferDto.builder()
-                                .skillId(skillOffer.getSkill().getId())
-                                .build())
-                        .toList())
-                .createdAt(recommendation.getCreatedAt())
-                .build();
+    @Override
+    public List<RecommendationDto> getAllUserRecommendations(long receiverId, Pageable pageable) {
+        return recommendationRepository.findAllByReceiverId(receiverId, pageable)
+                .stream()
+                .map(recommendationMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<RecommendationDto> getAllGivenRecommendations(long authorId, Pageable pageable) {
+        return recommendationRepository.findAllByAuthorId(authorId, pageable)
+                .stream()
+                .map(recommendationMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional
+    public RecommendationDto update(long id, RecommendationDto recommendationDto) {
+        Recommendation recommendation = recommendationRepository.findById(id)
+                .orElseThrow(() -> new DataValidationException("Recommendation not found"));
+
+        recommendationMapper.updateFromDto(recommendationDto, recommendation);
+        recommendation.setUpdatedAt(LocalDateTime.now());
+
+        recommendationRepository.save(recommendation);
+        skillOfferRepository.deleteAllByRecommendationId(recommendation.getId());
+        handleSkillOffers(recommendation, recommendationDto.getSkillOffers());
+
+        return recommendationMapper.toDto(recommendation);
     }
 
     @Override
@@ -115,4 +92,16 @@ public class RecommendationServiceImpl implements RecommendationService {
         recommendationRepository.delete(recommendation);
     }
 
+    private void handleSkillOffers(Recommendation recommendation, List<SkillOfferDto> skillOffers) {
+        for (SkillOfferDto skillOfferDto : skillOffers) {
+            Skill skill = skillRepository.findById(skillOfferDto.getSkillId())
+                    .orElseThrow(() -> new DataValidationException("Skill not found"));
+
+            SkillOffer skillOffer = SkillOffer.builder()
+                    .skill(skill)
+                    .recommendation(recommendation)
+                    .build();
+            skillOfferRepository.save(skillOffer);
+        }
+    }
 }
